# OpenXRSamples

./: .gitmodules  CMakeLists.txt  LICENSE  computer.cpp  computer.h  main.cpp  particlefire.cpp  particlefire.h
Renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  GLFWUtil.cpp  GLFWUtil.h  OpenXRUtil.cpp  OpenXRUtil.h  VulkanUtil.cpp  VulkanUtil.h  imguiExtras.cpp  imguiExtras.h
Renderer/CMake/: FindImgui.cmake  FindOpenXR.cmake  funcs.cmake
Renderer/OpenXR/: CommonHelper.cpp  CommonHelper.h  Initializers.cpp  Initializers.h  XRSwapChains.cpp  XRSwapChains.h  XrMath.h  quad.cpp  quad.h
Renderer/Vulkan/: Buffers.cpp  Buffers.h  CommandBuffers.cpp  CommandBuffers.h  CommandPool.cpp  CommandPool.h  CommonHelper.cpp  CommonHelper.h  Debug.cpp  Debug.h  Device.cpp  Device.h  GLTFModel.cpp  GLTFModel.h  GPUProgram.cpp  GPUProgram.h  GPUSemaphores.cpp  GPUSemaphores.h  Initializers.cpp  Initializers.h  SwapChains.cpp  SwapChains.h  Texture.cpp  Texture.h  UIOverlay.cpp  UIOverlay.h
Renderer/Vulkan/UIShaders/: uioverlay.frag  uioverlay.vert
shaders/: normalmap.frag  skinnedmodel.frag  skinnedmodel.vert
